remove the width styles - causing overflow issues

--- a/src/web/hippo-booking/src/styles/global.scss
+++ b/src/web/hippo-booking/src/styles/global.scss
@@ -56,11 +56,6 @@ body {
 main {
   min-height: calc(100dvh - (6rem + 4rem)); // = full height - (header height - footer height)
   background-color: var(--hippo-brand-grey);
-  width: 100vw;
-}
-
-.page-container{
-  width: 100vw;
 }
 
 .login-page-container{
